--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@
 6.zip filter=lfs diff=lfs merge=lfs -text
 8.zip filter=lfs diff=lfs merge=lfs -text
 9.zip filter=lfs diff=lfs merge=lfs -text
+10_sub.z01 filter=lfs diff=lfs merge=lfs -text
+10_sub.zip filter=lfs diff=lfs merge=lfs -text
